output annotation files for tif and jpg

--- a/notebooks/bbox2trainingdata.ipynb
+++ b/notebooks/bbox2trainingdata.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,10 @@
     "rasters_file_path = '../../data/data_merged/tif/*.tif'\n",
     "\n",
     "# define paths with contrast polygon (area with trees)\n",
-    "contrast_file_path = '../../data/data_merged/*.shp'"
+    "contrast_file_path = '../../data/data_merged/*.shp'\n",
+    "\n",
+    "# output folder\n",
+    "output_path = '../../data/data_merged/training_data/'"
    ]
   },
   {
@@ -276,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -284,12 +287,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbad7812a1804bb894e1e71f9c230386",
+       "model_id": "ef52cea1cc0d48e488b809d3bf1908fe",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=10.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=418.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -299,7 +302,144 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "no annotations in chunk 35\n",
+      "no annotations in chunk 36\n",
+      "no annotations in chunk 37\n",
+      "no annotations in chunk 73\n",
+      "no annotations in chunk 74\n",
+      "no annotations in chunk 75\n",
+      "no annotations in chunk 77\n",
+      "no annotations in chunk 111\n",
+      "no annotations in chunk 112\n",
+      "no annotations in chunk 113\n",
+      "no annotations in chunk 115\n",
+      "no annotations in chunk 151\n",
+      "no annotations in chunk 152\n",
+      "no annotations in chunk 153\n",
+      "no annotations in chunk 154\n",
+      "no annotations in chunk 155\n",
+      "no annotations in chunk 156\n",
+      "no annotations in chunk 157\n",
+      "no annotations in chunk 158\n",
+      "no annotations in chunk 159\n",
+      "no annotations in chunk 160\n",
+      "no annotations in chunk 161\n",
+      "no annotations in chunk 162\n",
+      "no annotations in chunk 163\n",
+      "no annotations in chunk 164\n",
+      "no annotations in chunk 165\n",
+      "no annotations in chunk 166\n",
+      "no annotations in chunk 167\n",
+      "no annotations in chunk 168\n",
+      "no annotations in chunk 169\n",
+      "no annotations in chunk 170\n",
+      "no annotations in chunk 171\n",
+      "no annotations in chunk 172\n",
+      "no annotations in chunk 173\n",
+      "no annotations in chunk 174\n",
+      "no annotations in chunk 190\n",
+      "no annotations in chunk 191\n",
+      "no annotations in chunk 192\n",
+      "no annotations in chunk 193\n",
+      "no annotations in chunk 194\n",
+      "no annotations in chunk 195\n",
+      "no annotations in chunk 196\n",
+      "no annotations in chunk 197\n",
+      "no annotations in chunk 198\n",
+      "no annotations in chunk 199\n",
+      "no annotations in chunk 200\n",
+      "no annotations in chunk 201\n",
+      "no annotations in chunk 202\n",
+      "no annotations in chunk 203\n",
+      "no annotations in chunk 204\n",
+      "no annotations in chunk 205\n",
+      "no annotations in chunk 206\n",
+      "no annotations in chunk 207\n",
+      "no annotations in chunk 208\n",
+      "no annotations in chunk 209\n",
+      "no annotations in chunk 210\n",
+      "no annotations in chunk 211\n",
+      "no annotations in chunk 212\n",
+      "no annotations in chunk 213\n",
+      "no annotations in chunk 228\n",
+      "no annotations in chunk 229\n",
+      "no annotations in chunk 230\n",
+      "no annotations in chunk 236\n",
+      "no annotations in chunk 249\n",
+      "no annotations in chunk 250\n",
+      "no annotations in chunk 266\n",
+      "no annotations in chunk 267\n",
+      "no annotations in chunk 268\n",
+      "no annotations in chunk 287\n",
+      "no annotations in chunk 288\n",
+      "no annotations in chunk 289\n",
+      "no annotations in chunk 290\n",
+      "no annotations in chunk 291\n",
+      "no annotations in chunk 292\n",
+      "no annotations in chunk 293\n",
+      "no annotations in chunk 294\n",
+      "no annotations in chunk 295\n",
+      "no annotations in chunk 296\n",
+      "no annotations in chunk 299\n",
+      "no annotations in chunk 301\n",
+      "no annotations in chunk 302\n",
+      "no annotations in chunk 303\n",
+      "no annotations in chunk 304\n",
+      "no annotations in chunk 305\n",
+      "no annotations in chunk 306\n",
+      "no annotations in chunk 307\n",
+      "no annotations in chunk 309\n",
+      "no annotations in chunk 325\n",
+      "no annotations in chunk 326\n",
+      "no annotations in chunk 327\n",
+      "no annotations in chunk 328\n",
+      "no annotations in chunk 329\n",
+      "no annotations in chunk 330\n",
+      "no annotations in chunk 331\n",
+      "no annotations in chunk 332\n",
+      "no annotations in chunk 333\n",
+      "no annotations in chunk 334\n",
+      "no annotations in chunk 335\n",
+      "no annotations in chunk 336\n",
+      "no annotations in chunk 337\n",
+      "no annotations in chunk 338\n",
+      "no annotations in chunk 339\n",
+      "no annotations in chunk 340\n",
+      "no annotations in chunk 341\n",
+      "no annotations in chunk 342\n",
+      "no annotations in chunk 343\n",
+      "no annotations in chunk 344\n",
+      "no annotations in chunk 363\n",
+      "no annotations in chunk 364\n",
+      "no annotations in chunk 365\n",
+      "no annotations in chunk 366\n",
+      "no annotations in chunk 367\n",
+      "no annotations in chunk 368\n",
+      "no annotations in chunk 369\n",
+      "no annotations in chunk 370\n",
+      "no annotations in chunk 371\n",
+      "no annotations in chunk 372\n",
+      "no annotations in chunk 373\n",
+      "no annotations in chunk 374\n",
+      "no annotations in chunk 375\n",
+      "no annotations in chunk 376\n",
+      "no annotations in chunk 377\n",
+      "no annotations in chunk 378\n",
+      "no annotations in chunk 379\n",
+      "no annotations in chunk 380\n",
+      "no annotations in chunk 381\n",
+      "no annotations in chunk 382\n",
+      "no annotations in chunk 401\n",
+      "no annotations in chunk 402\n",
+      "no annotations in chunk 403\n",
+      "no annotations in chunk 404\n",
+      "no annotations in chunk 405\n",
+      "no annotations in chunk 406\n",
+      "no annotations in chunk 407\n",
+      "no annotations in chunk 408\n",
+      "no annotations in chunk 409\n",
+      "no annotations in chunk 410\n",
+      "no annotations in chunk 411\n"
      ]
     }
    ],
@@ -309,7 +449,7 @@
     "\n",
     "import cv2\n",
     "\n",
-    "for i in tqdm(range(10)):\n",
+    "for i in tqdm(range(len(windows))):\n",
     "\n",
     "        # convert chunk coordinates to bbox\n",
     "        x_min = (windows[i].x * x_pix_size_m) + x_min_data\n",
@@ -349,6 +489,7 @@
     "        \n",
     "        img_plot_enhance = np.array(img_plot, copy=True)\n",
     "        \n",
+    "        file_path_tif = '{0}example_{1:03d}.tif'.format(output_path,i)\n",
     "        file_name_tif = 'example_{0:03d}.tif'.format(i)\n",
     "\n",
     "        # generate tiff profile \n",
@@ -357,7 +498,7 @@
     "        profile['width'] = windows[i].w\n",
     "        profile['height'] = windows[i].h\n",
     "\n",
-    "        with rasterio.open(file_name_tif, 'w', **profile) as dst:\n",
+    "        with rasterio.open(file_path_tif, 'w', **profile) as dst:\n",
     "            dst.write(out_img_chunk)\n",
     "            \n",
     "        for band in range(3):            \n",
@@ -367,8 +508,9 @@
     "                                                            out_range = 'uint8')\n",
     "\n",
     "        \n",
+    "        file_path_jpg = '{0}example_{1:03d}.jpg'.format(output_path,i)\n",
     "        file_name_jpg = 'example_{0:03d}.jpg'.format(i)\n",
-    "        imsave(file_name_jpg, img_plot_enhance.astype('uint8'))\n",
+    "        imsave(file_path_jpg, img_plot_enhance.astype('uint8'))\n",
     "                        \n",
     "        # for plotting\n",
     "\n",
@@ -378,10 +520,16 @@
     "            y_min_bbox = np.round(y[0]).astype(int).min()\n",
     "            y_max_bbox = np.round(y[0]).astype(int).max()\n",
     "            \n",
-    "            string_list = [file_name, str(x_min_bbox), str(x_max_bbox), str(y_min_bbox), str(y_max_bbox), label]\n",
+    "            string_list = [file_name_tif, str(x_min_bbox), str(x_max_bbox), str(y_min_bbox), str(y_max_bbox), label]\n",
     "            string = \",\".join(string_list)\n",
-    "\n",
-    "            with open('file.txt', 'a') as file:\n",
+    "            \n",
+    "            with open('{0}annotations_tif.txt'.format(output_path,i), 'a') as file:\n",
+    "                file.write(string + \"\\n\")\n",
+    "            \n",
+    "            string_list = [file_name_jpg, str(x_min_bbox), str(x_max_bbox), str(y_min_bbox), str(y_max_bbox), label]\n",
+    "            string = \",\".join(string_list)\n",
+    "            \n",
+    "            with open('{0}annotations_jpg.txt'.format(output_path,i), 'a') as file:\n",
     "                file.write(string + \"\\n\")\n",
     "                \n",
     "                \n",
@@ -408,6 +556,13 @@
     "        gc.collect()\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
