update tif2img notebook, fix no data issue

--- a/notebooks/tif2img.ipynb
+++ b/notebooks/tif2img.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,7 @@
     "file_type = 'jpg' # jpg or png\n",
     "upper_percentile = 98\n",
     "lower_percentile = 2\n",
+    "no_data_value = -999\n",
     "\n",
     "# misc\n",
     "plot_results = True"
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -221,15 +222,17 @@
     "\n",
     "    dataset = rasterio.open(raster_file)\n",
     "    \n",
+    "    # read and reformat raster data\n",
     "    img = dataset.read()\n",
-    "    \n",
     "    img_plot_raw = img[band_list,:,:]\n",
     "    img_plot = np.rot90(np.fliplr(img_plot_raw.T))\n",
     "    \n",
+    "    # correct exposure for each band individually\n",
     "    img_plot_enhance = np.array(img_plot, copy=True)\n",
     "    \n",
     "    for band in range(3):\n",
-    "        p_1, p_2 = np.percentile(img_plot[:,:,band], (lower_percentile, upper_percentile))\n",
+    "        img_plot[img_plot == no_data_value] = np.nan \n",
+    "        p_1, p_2 = np.nanpercentile(img_plot[:,:,band], (lower_percentile, upper_percentile))\n",
     "        img_plot_enhance[:,:,band] = exposure.rescale_intensity(img_plot[:,:,band], \n",
     "                                                            in_range=(p_1, p_2), \n",
     "                                                            out_range = 'uint8')  \n",
@@ -256,6 +259,13 @@
     "        print('file written to: \\n', file_path_jpg)\n",
     "        print('--------------------------------------------')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
